test: configure test profile with H2 and fix context loading